[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "crpy-xmzt"
version = "0.0.1"
authors = [ 
  { name="xmzt", email="117325034+xmzt@users.noreply.github.com" }
]
description = "C Reader in Python. Parse C code into an AST."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
#dependencies = [ "pylib0-xmzt" ]

[project.urls]
"Homepage" = "https://github.com/xmzt/crpy"
